--- a/src/styles/components/_Transactions.scss
+++ b/src/styles/components/_Transactions.scss
@@ -2,16 +2,16 @@
     height: 89vh;
     display: flex;
     .transaction-table {
-        width: 75%;
+        width: 100%;
         height: 100%;
-        border: 1px solid green;
+        border: 1px solid $btn-grey;
+        color: $light;
         .header {
             border-bottom: 1px solid $btn-grey;
             padding: 1rem;
             text-align: center;
             h4 {
                 text-align: center;
-                color: #fff;
                 font-size: 1.35rem;
             }
         }
@@ -19,46 +19,39 @@
             border-collapse: collapse;
             width: 100%;
             .table-header {
-               th:nth-child(2){
-                   width: 10%;
-                   border: 1px solid green;
-               }
-               th:last-child{
-                   width: 5%;
-                   border: 1px solid orange;
-               }
-                th:nth-child(4){
-                    width: 35%;
-                    border: 1px solid blue;
+                th:nth-child(1) {
+                    width: 10%;
                 }
-                th{
+                th:nth-child(2) {
+                    width: 10%;
+                }
+                th:nth-child(3) {
+                    width: 15%;
+                }
+                th:nth-child(4) {
+                    width: 30%;
+                }
+                th:last-child {
+                    width: 10%;
+                }
+                th {
                     padding: 0.5rem;
                     font-size: 1.25rem;
-                    color: #fff;
+                    border: 1px solid $btn-grey;
                 }
             }
             .table-body {
+                td {
+                    border: 1px solid $btn-grey;
+                }
                 tr {
-                    td{
+                    td {
                         padding: 0.5rem 0;
                         text-align: center;
-                        color: #fff;
                         font-size: 1rem;
-                    }
-                    td:not(:nth-child(4)){
-                        border: 1px solid red;
-                      
-                    }
-                    td:nth-child(4){
-                        border: 1px solid blue;
                     }
                 }
             }
         }
-    }
-    .transaction-viewer {
-        width: 25%;
-        border: 1px solid orange;
-        height: 100%;
     }
 }
