--- a/src/styles/components/_WorkOrders.scss
+++ b/src/styles/components/_WorkOrders.scss
@@ -1,9 +1,9 @@
 .component-workOrders {
     display: flex;
+    color: $light;
     .control-panel {
-        width: 25%;
-        border: 1px solid $btn-grey;
-        color: #fff;
+        width: 25%; // border: 1px solid $btn-grey;
+        // color: #fff;
         min-height: 89vh;
         .control-panel-header {
             display: flex;
@@ -32,21 +32,19 @@
         }
     }
     .component-views {
-        border: 1px solid orange;
+        border-left: 1px solid $btn-grey;
         width: 75%;
         height: 89vh;
-        color: #fff;
         .add-job {
             height: 100%;
             .job-order-form {
-                border: 3px solid green;
-                width: 90%;
                 height: 100%;
                 margin: 0 auto;
                 .form-header {
                     text-align: center;
-                    border: 1px solid red;
-                    height: 10%;
+                    border-left: 1px solid $btn-grey;
+                    border-bottom: 1px solid $btn-grey;
+                    height: 12%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -58,7 +56,6 @@
                     padding: 0 2rem;
                     height: 70%;
                     margin-top: 2%;
-                    border: 3px solid orange;
                     display: flex;
                     justify-content: space-between;
                     h5 {
@@ -103,12 +100,12 @@
                     }
                 }
                 .form-footer {
-                    border: 1px solid red;
-                    padding: 8px 0;
+                    border-top: 1px solid $btn-grey;
                     height: 10%;
                     display: flex;
                     justify-content: center;
-                    margin-top: 3%;
+                    align-items: center;
+                    margin-top: 1rem;
                     button {
                         padding: 6px 12px;
                         border-radius: 5px;
@@ -133,7 +130,6 @@
                 margin-bottom: 1rem;
                 justify-content: center;
                 h4 {
-                    color: #fff;
                     font-size: 1.5rem;
                 }
                 .job-number {
@@ -144,21 +140,14 @@
             }
             .job-queue-container {
                 height: 75%;
-                border: 1px solid yellow;
                 .job {
                     display: flex;
-                    border: 1px solid blue;
+                    border: 1px solid $btn-grey;
                     height: 17%;
                     justify-content: space-between;
                     align-items: center;
                     padding: 0 1rem;
-                    color: #fff;
                     margin-bottom: 0.75rem;
-                    .job-house-img {
-                        border: 1px solid green;
-                        height: 100%;
-                        width: 15%;
-                    }
                     .job-id {
                         font-size: 1.25rem;
                     }
@@ -206,7 +195,8 @@
         .completed-jobs {
             height: 100%;
             .job-header {
-                border: 1px solid red;
+                border-bottom: 1px solid $btn-grey;
+                border-left: 1px solid $btn-grey;
                 height: 12%;
                 display: flex;
                 justify-content: center;
@@ -219,10 +209,9 @@
                 padding: 0 1rem 1rem 1rem;
                 display: flex;
                 flex-wrap: wrap;
-                border: 1px solid blue;
                 height: 79%;
                 width: 100%;
-                i:hover{
+                i:hover {
                     cursor: pointer;
                 }
                 .work-order-list {
@@ -233,7 +222,6 @@
                         height: 32vh;
                         width: 31%;
                         margin-top: 1rem;
-                        border: 1px solid red;
                         .work-order-info {
                             border: 1px solid green;
                             height: 100%;
@@ -276,11 +264,9 @@
                             }
                         }
                         .card-img-header {
-                            border: 1px solid red;
                             position: relative;
                             height: 100%;
                             width: 100%;
-                            border: 1px solid green;
                             img {
                                 height: 100%;
                                 width: 100%;
@@ -311,13 +297,11 @@
                         }
                     }
                     .work-order:nth-child(3n+2) {
-                        border: 2px solid orange;
                         margin-left: 3%;
                         margin-right: 3%;
                     }
                 }
                 .edit-work-order {
-                    border: 1px solid green;
                     width: 95%;
                     margin: 0 auto;
                     padding-top: 1rem;
@@ -325,10 +309,12 @@
                     .property-info-container {
                         height: 100%;
                         width: 40%;
-                        border: 1px solid yellow;
+                       
                         .property-address {
-                            text-align: center;
-                            padding: 1rem 0;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            height: 15%;
                             background-color: #2E6B8D;
                             h4 {
                                 font-size: 1.1rem;
@@ -343,19 +329,21 @@
                         }
                         .edit-buttons {
                             display: flex;
+                            background-color: #2E6B8D;
                             justify-content: space-between;
-                            width: 75%;
-                            margin: 0 auto;
-                            margin-top: 1rem;
+                            align-items: center;
+                            padding: 0 1rem;
+                            width: 100%;
+                            height: 15% ;
                             button {
-                                padding: 0.5rem 0;
                                 width: 45%;
+                                height: 60%;
                             }
                         }
                     }
                     .work-order-info-container {
                         width: 60%;
-                        border: 1px solid orange;
+                        border: 1px solid $btn-grey;
                         .form {
                             padding: 2rem 1rem;
                             .input-group {
