--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -467,16 +467,15 @@ template {
           cursor: pointer; }
   .component-home .property-view {
     height: 89.5vh;
-    display: flex; }
+    display: flex;
+    color: #F9FDFF; }
     .component-home .property-view .property-controls {
       width: 30%;
-      border: 1px solid white;
       height: 100%; }
       .component-home .property-view .property-controls .controls-menu {
         display: flex;
         height: 12%; }
         .component-home .property-view .property-controls .controls-menu .menu-tab {
-          color: #fff;
           font-size: 1.35rem;
           border: 1px solid #4D5765;
           height: 100%;
@@ -491,11 +490,11 @@ template {
     .component-home .property-view .property-list-container {
       width: 70%;
       height: 100%;
-      border: 1px solid red;
+      border-left: 1px solid #4D5765;
       overflow: auto; }
       .component-home .property-view .property-list-container .property-header {
         height: 12%;
-        border: 1px solid green;
+        border-bottom: 1px solid #4D5765;
         padding: 0 1rem;
         display: flex;
         justify-content: space-between;
@@ -504,32 +503,14 @@ template {
           display: flex;
           align-items: center; }
           .component-home .property-view .property-list-container .property-header .header-title h3 {
-            color: #fff;
             font-size: 2rem; }
           .component-home .property-view .property-list-container .property-header .header-title h6 {
-            color: whitesmoke;
             font-size: 1rem;
             position: relative;
             top: 0.5vh;
             left: 2%; }
-      .component-home .property-view .property-list-container .pagination {
-        display: flex;
-        width: 20%;
-        justify-content: space-between;
-        align-items: center;
-        position: relative;
-        float: right; }
-        .component-home .property-view .property-list-container .pagination .pagination-button:hover {
-          cursor: pointer; }
-        .component-home .property-view .property-list-container .pagination .pagination-button i {
-          font-size: 2rem;
-          color: #fff; }
-        .component-home .property-view .property-list-container .pagination p {
-          font-size: 1.1rem;
-          color: #fff; }
       .component-home .property-view .property-list-container .property-list {
         padding: 1rem 0;
-        color: #fff;
         position: relative; }
         .component-home .property-view .property-list-container .property-list .property-message {
           position: absolute;
@@ -673,9 +654,8 @@ template {
 
 .component-property-wizard {
   height: 88%;
-  padding: 2vh 0 4vh 0;
-  overflow-y: auto;
-  overflow-x: hidden; }
+  padding: 2vh 0 3vh 0;
+  overflow-y: auto; }
   .component-property-wizard .wizard-step-title {
     text-align: center;
     color: #fff;
@@ -799,11 +779,10 @@ template {
         margin-bottom: 0.5rem; }
 
 .component-workOrders {
-  display: flex; }
+  display: flex;
+  color: #F9FDFF; }
   .component-workOrders .control-panel {
     width: 25%;
-    border: 1px solid #4D5765;
-    color: #fff;
     min-height: 89vh; }
     .component-workOrders .control-panel .control-panel-header {
       display: flex;
@@ -826,21 +805,19 @@ template {
         margin-bottom: 1rem;
         font-size: 1.25rem; }
   .component-workOrders .component-views {
-    border: 1px solid orange;
+    border-left: 1px solid #4D5765;
     width: 75%;
-    height: 89vh;
-    color: #fff; }
+    height: 89vh; }
     .component-workOrders .component-views .add-job {
       height: 100%; }
       .component-workOrders .component-views .add-job .job-order-form {
-        border: 3px solid green;
-        width: 90%;
         height: 100%;
         margin: 0 auto; }
         .component-workOrders .component-views .add-job .job-order-form .form-header {
           text-align: center;
-          border: 1px solid red;
-          height: 10%;
+          border-left: 1px solid #4D5765;
+          border-bottom: 1px solid #4D5765;
+          height: 12%;
           display: flex;
           justify-content: center;
           align-items: center; }
@@ -850,7 +827,6 @@ template {
           padding: 0 2rem;
           height: 70%;
           margin-top: 2%;
-          border: 3px solid orange;
           display: flex;
           justify-content: space-between; }
           .component-workOrders .component-views .add-job .job-order-form .form-body h5 {
@@ -884,12 +860,12 @@ template {
               border-radius: 10px;
               padding: 1rem; }
         .component-workOrders .component-views .add-job .job-order-form .form-footer {
-          border: 1px solid red;
-          padding: 8px 0;
+          border-top: 1px solid #4D5765;
           height: 10%;
           display: flex;
           justify-content: center;
-          margin-top: 3%; }
+          align-items: center;
+          margin-top: 1rem; }
           .component-workOrders .component-views .add-job .job-order-form .form-footer button {
             padding: 6px 12px;
             border-radius: 5px; }
@@ -909,28 +885,21 @@ template {
         margin-bottom: 1rem;
         justify-content: center; }
         .component-workOrders .component-views .job-queue .job-queue-header h4 {
-          color: #fff;
           font-size: 1.5rem; }
         .component-workOrders .component-views .job-queue .job-queue-header .job-number {
           font-size: 0.9rem;
           position: relative;
           bottom: 0.25vh; }
       .component-workOrders .component-views .job-queue .job-queue-container {
-        height: 75%;
-        border: 1px solid yellow; }
+        height: 75%; }
         .component-workOrders .component-views .job-queue .job-queue-container .job {
           display: flex;
-          border: 1px solid blue;
+          border: 1px solid #4D5765;
           height: 17%;
           justify-content: space-between;
           align-items: center;
           padding: 0 1rem;
-          color: #fff;
           margin-bottom: 0.75rem; }
-          .component-workOrders .component-views .job-queue .job-queue-container .job .job-house-img {
-            border: 1px solid green;
-            height: 100%;
-            width: 15%; }
           .component-workOrders .component-views .job-queue .job-queue-container .job .job-id {
             font-size: 1.25rem; }
           .component-workOrders .component-views .job-queue .job-queue-container .job .job-date .date {
@@ -958,7 +927,8 @@ template {
     .component-workOrders .component-views .completed-jobs {
       height: 100%; }
       .component-workOrders .component-views .completed-jobs .job-header {
-        border: 1px solid red;
+        border-bottom: 1px solid #4D5765;
+        border-left: 1px solid #4D5765;
         height: 12%;
         display: flex;
         justify-content: center;
@@ -969,7 +939,6 @@ template {
         padding: 0 1rem 1rem 1rem;
         display: flex;
         flex-wrap: wrap;
-        border: 1px solid blue;
         height: 79%;
         width: 100%; }
         .component-workOrders .component-views .completed-jobs .completed-jobs-container i:hover {
@@ -981,8 +950,7 @@ template {
           .component-workOrders .component-views .completed-jobs .completed-jobs-container .work-order-list .work-order {
             height: 32vh;
             width: 31%;
-            margin-top: 1rem;
-            border: 1px solid red; }
+            margin-top: 1rem; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .work-order-list .work-order .work-order-info {
               border: 1px solid green;
               height: 100%;
@@ -1017,11 +985,9 @@ template {
                 .component-workOrders .component-views .completed-jobs .completed-jobs-container .work-order-list .work-order .work-order-info .work-order-content .job-description {
                   text-align: center; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .work-order-list .work-order .card-img-header {
-              border: 1px solid red;
               position: relative;
               height: 100%;
-              width: 100%;
-              border: 1px solid green; }
+              width: 100%; }
               .component-workOrders .component-views .completed-jobs .completed-jobs-container .work-order-list .work-order .card-img-header img {
                 height: 100%;
                 width: 100%; }
@@ -1045,22 +1011,21 @@ template {
                   padding: 5px 0;
                   justify-content: space-between; }
           .component-workOrders .component-views .completed-jobs .completed-jobs-container .work-order-list .work-order:nth-child(3n+2) {
-            border: 2px solid orange;
             margin-left: 3%;
             margin-right: 3%; }
         .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order {
-          border: 1px solid green;
           width: 95%;
           margin: 0 auto;
           padding-top: 1rem;
           display: flex; }
           .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container {
             height: 100%;
-            width: 40%;
-            border: 1px solid yellow; }
+            width: 40%; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .property-address {
-              text-align: center;
-              padding: 1rem 0;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              height: 15%;
               background-color: #2E6B8D; }
               .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .property-address h4 {
                 font-size: 1.1rem; }
@@ -1071,16 +1036,18 @@ template {
                 width: 100%; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .edit-buttons {
               display: flex;
+              background-color: #2E6B8D;
               justify-content: space-between;
-              width: 75%;
-              margin: 0 auto;
-              margin-top: 1rem; }
+              align-items: center;
+              padding: 0 1rem;
+              width: 100%;
+              height: 15%; }
               .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .edit-buttons button {
-                padding: 0.5rem 0;
-                width: 45%; }
+                width: 45%;
+                height: 60%; }
           .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .work-order-info-container {
             width: 60%;
-            border: 1px solid orange; }
+            border: 1px solid #4D5765; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .work-order-info-container .form {
               padding: 2rem 1rem; }
               .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .work-order-info-container .form .input-group {
@@ -1106,46 +1073,40 @@ template {
   height: 89vh;
   display: flex; }
   .component-transactions .transaction-table {
-    width: 75%;
+    width: 100%;
     height: 100%;
-    border: 1px solid green; }
+    border: 1px solid #4D5765;
+    color: #F9FDFF; }
     .component-transactions .transaction-table .header {
       border-bottom: 1px solid #4D5765;
       padding: 1rem;
       text-align: center; }
       .component-transactions .transaction-table .header h4 {
         text-align: center;
-        color: #fff;
         font-size: 1.35rem; }
     .component-transactions .transaction-table .table-content {
       border-collapse: collapse;
       width: 100%; }
+      .component-transactions .transaction-table .table-content .table-header th:nth-child(1) {
+        width: 10%; }
       .component-transactions .transaction-table .table-content .table-header th:nth-child(2) {
-        width: 10%;
-        border: 1px solid green; }
-      .component-transactions .transaction-table .table-content .table-header th:last-child {
-        width: 5%;
-        border: 1px solid orange; }
+        width: 10%; }
+      .component-transactions .transaction-table .table-content .table-header th:nth-child(3) {
+        width: 15%; }
       .component-transactions .transaction-table .table-content .table-header th:nth-child(4) {
-        width: 35%;
-        border: 1px solid blue; }
+        width: 30%; }
+      .component-transactions .transaction-table .table-content .table-header th:last-child {
+        width: 10%; }
       .component-transactions .transaction-table .table-content .table-header th {
         padding: 0.5rem;
         font-size: 1.25rem;
-        color: #fff; }
+        border: 1px solid #4D5765; }
+      .component-transactions .transaction-table .table-content .table-body td {
+        border: 1px solid #4D5765; }
       .component-transactions .transaction-table .table-content .table-body tr td {
         padding: 0.5rem 0;
         text-align: center;
-        color: #fff;
         font-size: 1rem; }
-      .component-transactions .transaction-table .table-content .table-body tr td:not(:nth-child(4)) {
-        border: 1px solid red; }
-      .component-transactions .transaction-table .table-content .table-body tr td:nth-child(4) {
-        border: 1px solid blue; }
-  .component-transactions .transaction-viewer {
-    width: 25%;
-    border: 1px solid orange;
-    height: 100%; }
 
 .pagination {
   display: flex;
