--- a/src/styles/components/_WorkOrders.scss
+++ b/src/styles/components/_WorkOrders.scss
@@ -1,9 +1,13 @@
 .component-workOrders {
     display: flex;
     color: $light;
+    .pagination {
+        height: 9%;
+        float: none;
+        margin: 0 auto;
+    }
     .control-panel {
-        width: 25%; // border: 1px solid $btn-grey;
-        // color: #fff;
+        width: 25%;
         min-height: 89vh;
         .control-panel-header {
             display: flex;
@@ -140,6 +144,7 @@
             }
             .job-queue-container {
                 height: 75%;
+                border-bottom: 1px solid $btn-grey;
                 .job {
                     display: flex;
                     border: 1px solid $btn-grey;
@@ -186,11 +191,6 @@
                     }
                 }
             }
-            .pagination {
-                height: 8%;
-                position: relative;
-                margin: 0 auto;
-            }
         }
         .completed-jobs {
             height: 100%;
@@ -211,6 +211,7 @@
                 flex-wrap: wrap;
                 height: 79%;
                 width: 100%;
+                border-bottom: 1px solid $btn-grey;
                 i:hover {
                     cursor: pointer;
                 }
@@ -309,7 +310,6 @@
                     .property-info-container {
                         height: 100%;
                         width: 40%;
-                       
                         .property-address {
                             display: flex;
                             align-items: center;
@@ -334,7 +334,7 @@
                             align-items: center;
                             padding: 0 1rem;
                             width: 100%;
-                            height: 15% ;
+                            height: 15%;
                             button {
                                 width: 45%;
                                 height: 60%;
@@ -368,10 +368,6 @@
                         }
                     }
                 }
-            }
-            .pagination {
-                height: 9%;
-                margin-right: 1rem;
             }
         }
     }
