--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -781,6 +781,10 @@ template {
 .component-workOrders {
   display: flex;
   color: #F9FDFF; }
+  .component-workOrders .pagination {
+    height: 9%;
+    float: none;
+    margin: 0 auto; }
   .component-workOrders .control-panel {
     width: 25%;
     min-height: 89vh; }
@@ -891,7 +895,8 @@ template {
           position: relative;
           bottom: 0.25vh; }
       .component-workOrders .component-views .job-queue .job-queue-container {
-        height: 75%; }
+        height: 75%;
+        border-bottom: 1px solid #4D5765; }
         .component-workOrders .component-views .job-queue .job-queue-container .job {
           display: flex;
           border: 1px solid #4D5765;
@@ -920,10 +925,6 @@ template {
               color: #FFCF40; }
             .component-workOrders .component-views .job-queue .job-queue-container .job .job-controls .action:last-child i:hover {
               color: #4CD765; }
-      .component-workOrders .component-views .job-queue .pagination {
-        height: 8%;
-        position: relative;
-        margin: 0 auto; }
     .component-workOrders .component-views .completed-jobs {
       height: 100%; }
       .component-workOrders .component-views .completed-jobs .job-header {
@@ -940,7 +941,8 @@ template {
         display: flex;
         flex-wrap: wrap;
         height: 79%;
-        width: 100%; }
+        width: 100%;
+        border-bottom: 1px solid #4D5765; }
         .component-workOrders .component-views .completed-jobs .completed-jobs-container i:hover {
           cursor: pointer; }
         .component-workOrders .component-views .completed-jobs .completed-jobs-container .work-order-list {
@@ -1065,9 +1067,6 @@ template {
                 border-radius: 3px;
                 height: 27vh;
                 padding: 1rem; }
-      .component-workOrders .component-views .completed-jobs .pagination {
-        height: 9%;
-        margin-right: 1rem; }
 
 .component-transactions {
   height: 89vh;
@@ -1113,8 +1112,7 @@ template {
   width: 20%;
   justify-content: space-between;
   align-items: center;
-  position: relative;
-  float: right; }
+  position: relative; }
   .pagination .pagination-button:hover {
     cursor: pointer; }
   .pagination .pagination-button i {
