--- a/src/styles/components/_Pagination.scss
+++ b/src/styles/components/_Pagination.scss
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    // float: right;
+    float: right;
     .pagination-button {
         &:hover {
             cursor: pointer;
