--- a/src/styles/components/_Transactions.scss
+++ b/src/styles/components/_Transactions.scss
@@ -1,9 +1,11 @@
 .component-transactions {
     height: 89vh;
     display: flex;
+    flex-direction: column;
     .transaction-table {
         width: 100%;
         height: 100%;
+        height: 90%;
         border: 1px solid $btn-grey;
         color: $light;
         .header {
@@ -53,5 +55,10 @@
                 }
             }
         }
+    }
+    .pagination{
+        float: none;
+        height: 10%;
+        margin: 0 auto;
     }
 }
